--- a/about.html
+++ b/about.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -102,13 +106,17 @@ family=Nunito:ital,wght@0,200;0,300;0,400;1,200&family=PT+Serif:ital,wght@0,400;
         <span class="read-more-btn">Read more...</span>
       </div>
     </section>
+
+
    
 
 
-    <div class="logos">
+     <!-- sponsorships -->
+     <div class="logos">
 
       <div class="logos-slide">
         <img src="./logos/3m.svg" />
+        <img class="mv" src="./images/SGC LOGO (1).jpg" />
         <img class="mv" src="./logos/mawoc-logo-white bg.png" />
         <img src="./logos/barstool-store.svg" />
         <img class="mv" src="./logos/MV Logo.png" />
@@ -116,8 +124,9 @@ family=Nunito:ital,wght@0,200;0,300;0,400;1,200&family=PT+Serif:ital,wght@0,400;
         <img src="./logos/buzzfeed.svg" />
         <img class="mv" src="./logos/nita.png" />
         <img src="./logos/unical-sport.jpg" />
+        <img class="mv" src="./logos/eloenn (2).png" />
         <img src="./logos/games-logo.jpeg" />
-        <img src="./logos/forbes.svg" />
+        <img src="./logos/string pure.png" />
         <img src="./logos/macys.svg" />
         <img src="./logos/unical-logo.jpg" />
         <img src="./logos/sug.png" />
@@ -129,6 +138,7 @@ family=Nunito:ital,wght@0,200;0,300;0,400;1,200&family=PT+Serif:ital,wght@0,400;
       <div class="logos-slide">
         
         <img src="./logos/3m.svg" />
+        <img class="mv" src="./images/SGC LOGO (1).jpg" />
         <img class="mv" src="./logos/mawoc-logo-white bg.png" />
         <img src="./logos/barstool-store.svg" />
         <img class="mv" src="./logos/MV Logo.png" />
@@ -136,10 +146,11 @@ family=Nunito:ital,wght@0,200;0,300;0,400;1,200&family=PT+Serif:ital,wght@0,400;
         <img src="./logos/buzzfeed.svg" />
         <img  src="./logos/nita.png" />
         <img src="./logos/unical-sport.jpg" />
+        <img class="mv"  src="./logos/eloenn (2).png" />
         <img src="./logos/games-logo.jpeg" />
         <img src="./logos/sug-logo.png" />
         <img src="./logos/games-logo.jpeg" />
-        <img src="./logos/forbes.svg" />
+        <img src="./logos/string pure.png" />
         <img src="./logos/macys.svg" />
         <img src="./logos/unical-logo.jpg" />
         <img src="./logos/sug.png" />
@@ -147,7 +158,7 @@ family=Nunito:ital,wght@0,200;0,300;0,400;1,200&family=PT+Serif:ital,wght@0,400;
         <img src="./logos/menshealth.svg" />
       </div>
     </div>
-   
+      
 
 
 <div class="nav--container">
