--- a/fixtures.html
+++ b/fixtures.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fixtures</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
@@ -18,7 +22,7 @@
 
     
     <h1 class="marquee">
-        <span>Round Of 16 Start Wednesday 22nd May, 2024 To Fri. 24th May, 2024.*** </span>  
+        <span>(MAWOC 6th MAY - 30th MAY)&#8203 &#8203Round Of 16 Start Wed 22nd May - Fri. 24th May 2024.&#8203 &#8203 </span>  
     </h1>
       
       <!-- <h1 class="marquee2">
@@ -35,8 +39,8 @@
                 <a href="#match-group">Match By Group</a>
             </li>
         </div> -->
-        <h1 class="section-heading">Group Stage</h1>
-        <h1 class="section-heading">MAWOC Fixtures</h1>
+        <!-- <h1 class="section-heading">Group Stage</h1>
+        <h1 class="section-heading">MAWOC Fixtures</h1> -->
         <div class="matchs" id="match-date"></div>
         <!-- <h1 class="section-heading">Match By Group</h1>
         <div class="matchs-by-group" id="match-group"></div> -->
