Committing changes before running filter-branch

--- a/stats.html
+++ b/stats.html
@@ -181,7 +181,7 @@
             <div class="match-score">
                 <p>Ivory Coast</p>
                 <img class="match-result-img" src="https://img.icons8.com/?size=96&id=60220&format=png" alt="">
-                <span class="match-result">- : -</span>
+                <span class="match-result">1 - 1</span>
                <img class="match-result-img" src= "https://world-cup.codsfli.com/flag/USA.png" alt="">
                <p>USA</p>
             </div>
@@ -192,7 +192,7 @@
             <div class="match-score">
                 <p>Germany</p>
                 <img class="match-result-img" src="https://world-cup.codsfli.com/flag/GER.png" alt="">
-                <span class="match-result">- : -</span>
+                <span class="match-result">1 - 0</span>
             <img class="match-result-img" src=  "https://cdn-icons-png.flaticon.com/128/555/555444.png" alt="">
             <p>Tobago</p>
             </div>
@@ -204,7 +204,7 @@
             <div class="match-score">
                 <p>Denmark</p>
                 <img class="match-result-img" src="https://world-cup.codsfli.com/flag/DEN.png" alt="">
-                <span class="match-result">- : -</span>
+                <span class="match-result">1 - 0</span>
             <img class="match-result-img" src= "https://world-cup.codsfli.com/flag/SRB.png" alt="">
             <p>Serbia</p>
             </div>
@@ -218,7 +218,7 @@
                 <div class="match-score">
                     <p>Greece</p>
                     <img class="match-result-img" src="https://cdn-icons-png.flaticon.com/128/206/206682.png" alt="">
-                    <span class="match-result">- : -</span>
+                    <span class="match-result">1 - 1</span>
                 <img class="match-result-img" src= "https://world-cup.codsfli.com/flag/CAN.png"alt="">
                 <p>Canada</p>
                 </div>
@@ -228,7 +228,7 @@
             <div class="match-score">
                 <p>UAE</p>
                 <img class="match-result-img" src= "https://cdn-icons-png.flaticon.com/128/3373/3373319.png"alt="">
-                <span class="match-result">- : -</span>
+                <span class="match-result">2 - 1</span>
                 <img class="match-result-img" src=  "https://cdn-icons-png.flaticon.com/128/940/940286.png" alt="">
                 <p>Nigeria</p>
             </div>
@@ -240,7 +240,7 @@
             <div class="match-score">
                 <p>Poland</p>
                 <img class="match-result-img" src="https://world-cup.codsfli.com/flag/POL.png"alt="">
-                <span class="match-result">- : -</span>
+                <span class="match-result">1 - 1</span>
                 <img class="match-result-img" src= "https://world-cup.codsfli.com/flag/URU.png" alt="">
                 <p>Uruguay</p>
             </div>
@@ -254,7 +254,7 @@
                 <div class="match-score">
                     <p>China</p>  
                     <img class="match-result-img" src="https://cdn-icons-png.flaticon.com/128/5111/5111624.png" alt="">
-                    <span class="match-result">- : -</span>
+                    <span class="match-result">0 - 1</span>
                 <img class="match-result-img" src= "https://cdn-icons-png.flaticon.com/128/555/555606.png" alt="">
                 <p>Sweden</p>
                 </div>
@@ -264,7 +264,7 @@
             <div class="match-score"> 
                 <p>Italy</p>
                 <img class="match-result-img" src="https://cdn-icons-png.flaticon.com/128/3373/3373278.png" alt="">
-                <span class="match-result">- : -</span>
+                <span class="match-result">2 - 0</span>
                 <img class="match-result-img" src=  "https://cdn-icons-png.flaticon.com/128/206/206811.png" alt="">
                 <p>Paraguay</p>
             </div>
@@ -274,7 +274,7 @@
             <div class="match-score">
                 <p>Norway</p>
                 <img class="match-result-img" src= "https://cdn-icons-png.flaticon.com/128/555/555621.png" alt="">
-                <span class="match-result">- : -</span>
+                <span class="match-result">0 - 0</span>
                 <img class="match-result-img" src=  "https://world-cup.codsfli.com/flag/POR.png" alt="">
                 <p>Portugal</p>
             </div>
@@ -284,7 +284,7 @@
         <div class="match-score">
             <p>Tobago</p>
             <img class="match-result-img" src="https://cdn-icons-png.flaticon.com/128/555/555444.png" alt="">
-            <span class="match-result">- : -</span>
+            <span class="match-result">0 - 5</span>
             <img class="match-result-img" src= "https://networks.au-ibar.org/show/university-of-calabar/image/2008090514-1061-3120-400x300/AU+REC+logos+-+2022-03-30T154203.837.png" alt="">
             <p>Malabor</p>
         </div>
@@ -294,7 +294,7 @@
     <div class="match-score">  
         <p>Serbia</p>
         <img class="match-result-img" src= "https://world-cup.codsfli.com/flag/SRB.png" alt="">
-        <span class="match-result">- : -</span>
+        <span class="match-result">2 - 1</span>
         <img class="match-result-img" src= "https://world-cup.codsfli.com/flag/BEL.png" alt="">
         <p>Belgium</p>
     </div>
@@ -309,7 +309,7 @@
                 <div class="match-score">
                     <p>Canada</p>  
                     <img class="match-result-img" src= "https://world-cup.codsfli.com/flag/CAN.png"alt="">
-                    <span class="match-result">- : -</span>
+                    <span class="match-result">0 - 3</span>
                 <img class="match-result-img" src= "https://world-cup.codsfli.com/flag/CRO.png" alt="">
                 <p>Croatia</p>
                 </div>
@@ -319,7 +319,7 @@
             <div class="match-score"> 
                 <p>Nigeria</p>
                 <img class="match-result-img" src="https://cdn-icons-png.flaticon.com/128/940/940286.png" alt="">
-                <span class="match-result">- : -</span>
+                <span class="match-result">2 - 5</span>
                 <img class="match-result-img" src=  "https://world-cup.codsfli.com/flag/ESP.png" alt="">
                 <p>Spain</p>
             </div>
@@ -329,7 +329,7 @@
             <div class="match-score">
                 <p>Uruguay</p>
                 <img class="match-result-img" src=  "https://world-cup.codsfli.com/flag/URU.png" alt="">
-                <span class="match-result">- : -</span>
+                <span class="match-result">1 - 0</span>
                 <img class="match-result-img" src=  "https://world-cup.codsfli.com/flag/MEX.png" alt="">
                 <p>Mexico</p>
             </div>
@@ -345,7 +345,7 @@
                 <div class="match-score">
                   <p>Sweden</p>  
                     <img class="match-result-img" src= "https://cdn-icons-png.flaticon.com/128/555/555606.png" alt="">
-                    <span class="match-result">- : -</span>
+                    <span class="match-result">1 - 1</span>
                 <img class="match-result-img" src=  "https://world-cup.codsfli.com/flag/FRA.png" alt="">
                 <p>France</p>
                 </div>
@@ -355,7 +355,7 @@
             <div class="match-score">           
                 <p>Paraguay</p>
                 <img class="match-result-img" src="https://cdn-icons-png.flaticon.com/128/206/206811.png" alt="">
-                <span class="match-result">- : -</span>
+                <span class="match-result">0 - 1</span>
                 <img class="match-result-img" src=  "https://cdn-icons-png.flaticon.com/128/206/206697.png" alt="">
                 <p>Israel</p>
             </div>
@@ -365,7 +365,7 @@
             <div class="match-score">
                 <p>Portugal</p>
                 <img class="match-result-img" src= "https://world-cup.codsfli.com/flag/POR.png" alt="">
-                <span class="match-result">- : -</span>
+                <span class="match-result">2 - 2</span>
                 <img class="match-result-img" src=   "https://img.icons8.com/?size=96&id=60220&format=png" alt="">
                 <p>Ivory Coast</p>
             </div>
@@ -381,7 +381,7 @@
                 <div class="match-score">
                   <p>Finland</p>  
                     <img class="match-result-img" src= "https://cdn-icons-png.flaticon.com/128/555/555627.png" alt="">
-                    <span class="match-result">- : -</span>
+                    <span class="match-result">2 - 2</span>
                 <img class="match-result-img" src= "https://world-cup.codsfli.com/flag/GER.png"alt="">
                 <p>Germany</p>
                 </div>
@@ -391,7 +391,7 @@
             <div class="match-score">         
                 <p>England</p>
                 <img class="match-result-img" src="https://world-cup.codsfli.com/flag/ENG.png"alt="">
-                <span class="match-result">- : -</span>
+                <span class="match-result">0 - 1</span>
                 <img class="match-result-img" src=  "https://world-cup.codsfli.com/flag/DEN.png"  alt="">
                 <p>Denmark</p>
             </div>
@@ -401,7 +401,7 @@
             <div class="match-score"> 
                 <p>Brazil</p>
                 <img class="match-result-img" src= "https://world-cup.codsfli.com/flag/BRA.png" alt="">
-                <span class="match-result">- : -</span>
+                <span class="match-result">0 - 0</span>
                 <img class="match-result-img" src= "https://cdn-icons-png.flaticon.com/128/206/206682.png" alt="">
                 <p>Greece</p>
             </div>
@@ -416,7 +416,7 @@
                 <div class="match-score">
                   <p>Netherlands</p>  
                     <img class="match-result-img" src= "https://world-cup.codsfli.com/flag/NED.png" alt="">
-                    <span class="match-result">- : -</span>
+                    <span class="match-result">0 - 2</span>
                 <img class="match-result-img" src=  "https://cdn-icons-png.flaticon.com/128/3373/3373319.png" alt="">
                 <p>UAE</p>
                 </div>
@@ -426,7 +426,7 @@
             <div class="match-score">         
                 <p>Tanzania</p>
                 <img class="match-result-img" src= "https://cdn-icons-png.flaticon.com/128/555/555676.png" alt="">
-                <span class="match-result">- : -</span>
+                <span class="match-result">2 - 4</span>
                 <img class="match-result-img" src= "https://world-cup.codsfli.com/flag/POL.png"  alt="">
                 <p>Poland</p>
             </div>
@@ -436,7 +436,7 @@
             <div class="match-score">
                 <p>Cape Verde</p>
                 <img class="match-result-img" src=  "https://cdn-icons-png.flaticon.com/128/206/206814.png" alt="">
-                <span class="match-result">- : -</span>
+                <span class="match-result">0 - 2</span>
                 <img class="match-result-img" src="https://cdn-icons-png.flaticon.com/128/5111/5111624.png" alt="">
                 <p>China</p>
             </div>
@@ -451,7 +451,7 @@
                 <div class="match-score">  
                   <p>Argentina</p>  
                     <img class="match-result-img" src=  "https://world-cup.codsfli.com/flag/ARG.png" alt="">
-                    <span class="match-result">- : -</span>
+                    <span class="match-result">0 - 1</span>
                 <img class="match-result-img" src=  "https://cdn-icons-png.flaticon.com/128/3373/3373278.png"alt="">
                 <p>Italy</p>
                 </div>
@@ -461,7 +461,7 @@
             <div class="match-score">      
                 <p>USA</p>
                 <img class="match-result-img" src="https://world-cup.codsfli.com/flag/USA.png" alt="">
-                <span class="match-result">- : -</span>
+                <span class="match-result">2 - 0</span>
                 <img class="match-result-img" src= "https://cdn-icons-png.flaticon.com/128/555/555621.png" alt="">
                 <p>Norway</p>
             </div>
@@ -471,7 +471,7 @@
             <div class="match-score">
                 <p>Malabor</p>
                 <img class="match-result-img" src= "https://networks.au-ibar.org/show/university-of-calabar/image/2008090514-1061-3120-400x300/AU+REC+logos+-+2022-03-30T154203.837.png" alt="">
-                <span class="match-result">- : -</span>
+                <span class="match-result">4 - 2</span>
                 <img class="match-result-img" src=  "https://world-cup.codsfli.com/flag/GER.png" alt="">
                 <p>Germany</p>
             </div>
@@ -486,7 +486,7 @@
                 <div class="match-score">
                   <p>Belgium</p>  
                     <img class="match-result-img" src=  "https://world-cup.codsfli.com/flag/BEL.png" alt="">
-                    <span class="match-result">- : -</span>
+                    <span class="match-result">1 - 1</span>
                 <img class="match-result-img" src= "https://world-cup.codsfli.com/flag/DEN.png" alt="">
                 <p>Denmark</p>
                 </div>
@@ -496,7 +496,7 @@
             <div class="match-score">  
                 <p>Croatia</p>
                 <img class="match-result-img" src= "https://world-cup.codsfli.com/flag/CRO.png" alt="">
-                <span class="match-result">- : -</span>
+                <span class="match-result">1 - 1</span>
                 <img class="match-result-img" src=  "https://cdn-icons-png.flaticon.com/128/206/206682.png"  alt="">
                 <p>Greece</p>
             </div>
@@ -506,7 +506,7 @@
             <div class="match-score">
                 <p>Spain</p>
                 <img class="match-result-img" src= "https://world-cup.codsfli.com/flag/ESP.png" alt="">
-                <span class="match-result">- : -</span>
+                <span class="match-result">3 - 2</span>
                 <img class="match-result-img" src=  "https://cdn-icons-png.flaticon.com/128/3373/3373319.png" alt="">
                 <p>UAE</p>
             </div>
@@ -521,7 +521,7 @@
                 <div class="match-score">
                   <p>Mexico</p>  
                     <img class="match-result-img" src=  "https://world-cup.codsfli.com/flag/MEX.png" alt="">
-                    <span class="match-result">- : -</span>
+                    <span class="match-result">1 - 2</span>
                 <img class="match-result-img" src= "https://world-cup.codsfli.com/flag/POL.png" alt="">
                 <p>Poland</p>
                 </div>
@@ -531,7 +531,7 @@
             <div class="match-score">  
                 <p>France</p>
                 <img class="match-result-img" src= "https://world-cup.codsfli.com/flag/FRA.png" alt="">
-                <span class="match-result">- : -</span>
+                <span class="match-result">0 - 1</span>
                 <img class="match-result-img" src= "https://cdn-icons-png.flaticon.com/128/5111/5111624.png"  alt="">
                 <p>China</p>
             </div>
@@ -541,7 +541,7 @@
             <div class="match-score">
                 <p>Israel</p>
                 <img class="match-result-img" src= "https://cdn-icons-png.flaticon.com/128/206/206697.png" alt="">
-                <span class="match-result">- : -</span>
+                <span class="match-result">2 - 3</span>
                 <img class="match-result-img" src=  "https://cdn-icons-png.flaticon.com/128/3373/3373278.png" alt="">
                 <p>Italy</p>
             </div>
@@ -551,7 +551,7 @@
           <div class="match-score">
             <p>Ivory Coast</p>
             <img class="match-result-img" src=  "https://img.icons8.com/?size=96&id=60220&format=png" alt="">
-            <span class="match-result">- : -</span>
+            <span class="match-result">4 - 0</span>
             <img class="match-result-img" src= "https://cdn-icons-png.flaticon.com/128/555/555621.png" alt="">
             <p>Norway</p>
         </div>
