modified stats and standing.html

--- a/stats.html
+++ b/stats.html
@@ -566,7 +566,7 @@
                 <div class="match-score">
                   <p>Tobago</p>  
                     <img class="match-result-img" src= "https://cdn-icons-png.flaticon.com/128/555/555444.png" alt="">
-                    <span class="match-result">- : -</span>
+                    <span class="match-result">0 - 4</span>
                 <img class="match-result-img" src=  "https://cdn-icons-png.flaticon.com/128/555/555627.png" alt="">
                 <p>Finland</p>
                 </div>
