modified standigs and stats.html

--- a/stats.html
+++ b/stats.html
@@ -576,8 +576,8 @@
             <div class="match-score">  
                 <p>Serbia</p>
                 <img class="match-result-img" src= "https://world-cup.codsfli.com/flag/SRB.png" alt="">
-                <span class="match-result">- : -</span>
-                <img class="match-result-img" src=   "https://world-cup.codsfli.com/flag/ENG.png" alt="">
+                <span class="match-result">1 - 1</span>
+                <img  class="match-result-img" src=   "https://world-cup.codsfli.com/flag/ENG.png" alt="">
                 <p>England</p>
             </div>
 
@@ -586,7 +586,7 @@
             <div class="match-score">
                 <p>Canada</p>
                 <img class="match-result-img" src= "https://world-cup.codsfli.com/flag/CAN.png" alt="">
-                <span class="match-result">- : -</span>
+                <span class="match-result">2 - 1</span>
                 <img class="match-result-img" src=  "https://world-cup.codsfli.com/flag/BRA.png" alt="">
                 <p>Brazil</p>
             </div>
@@ -601,7 +601,7 @@
                 <div class="match-score">
                   <p>Nigeria</p>  
                     <img class="match-result-img" src=  "https://cdn-icons-png.flaticon.com/128/940/940286.png" alt="">
-                    <span class="match-result">- : -</span>
+                    <span class="match-result">0 - 0</span>
                 <img class="match-result-img" src= "https://world-cup.codsfli.com/flag/NED.png" alt="">
                 <p>Netherlands</p>
                 </div>
@@ -611,7 +611,7 @@
             <div class="match-score">  
                 <p>Uruguay</p>
                 <img class="match-result-img" src= "https://world-cup.codsfli.com/flag/URU.png" alt="">
-                <span class="match-result">- : -</span>
+                <span class="match-result">1 - 0</span>
                 <img class="match-result-img" src=  "https://cdn-icons-png.flaticon.com/128/555/555676.png" alt="">
                 <p>Tanzania</p>
             </div>
@@ -621,7 +621,7 @@
             <div class="match-score">    
                 <p>Sweden</p>
                 <img class="match-result-img" src= "https://cdn-icons-png.flaticon.com/128/555/555606.png"  alt="">
-                <span class="match-result">- : -</span>
+                <span class="match-result">1 - 0</span>
                 <img class="match-result-img" src= "https://cdn-icons-png.flaticon.com/128/206/206814.png" alt="">
                 <p>Cape Verde</p>
             </div>
