modified data in stats, standings,fixtures, images

--- a/stats.html
+++ b/stats.html
@@ -79,8 +79,121 @@
 
 <main>
 
+  <!-- ROUND OF 16 -->
+  <h2 class="match-result-heading">MATCH RESULTS</h2>
 
-    <h2 class="match-result-heading">MATCH RESULTS</h2>
+  <h2 class="match-result-heading">ROUND OF 16 (KNOCK-OUT STAGE)</h2>
+
+  <div class="match-result-container read--more round-of-16">
+    
+ <div>  
+  <h4 class="match-date">Tue 21 May 2024</h4>
+   
+  <div class="match-score">
+    <p>Croatia</p>
+    <img class="match-result-img" src= "https://world-cup.codsfli.com/flag/CRO.png"alt="">
+    <span class="match-result match-result-color">0 - 4 </span>
+    <img class="match-result-img" src= "https://cdn-icons-png.flaticon.com/128/555/555627.png" alt="">
+    <p>Finland ☑️</p>  
+</div>
+<span class="divider"></span>
+
+</div>
+
+
+<div>
+
+<h4 class="match-date">Wed 22 May 2024</h4>
+ 
+  <div class="match-score">
+    <p>Spain</p>
+    <img class="match-result-img" src=  "https://world-cup.codsfli.com/flag/ESP.png"alt="">
+    <span class="match-result">0 : 1</span>
+    <img class="match-result-img" src= "https://world-cup.codsfli.com/flag/SRB.png" alt=""> 
+    <p>Serbia</p>
+  </div>
+  <span class="divider"></span>
+
+  <div class="match-score">
+    <p>Italy</p>
+    <img class="match-result-img" src="https://cdn-icons-png.flaticon.com/128/3373/3373278.png" alt="">
+    <span class="match-result">2 : 0</span>
+    <img class="match-result-img" src= "https://world-cup.codsfli.com/flag/URU.png" alt="">
+    <p>Uruguay</p>
+  </div>
+  <span class="divider"></span>
+
+  <div class="match-score">
+    <p>Ivory Coast</p>
+    <img class="match-result-img" src= "https://img.icons8.com/?size=96&id=60220&format=png" alt="">
+    <span class="match-result">1 : 2</span>  
+    <img class="match-result-img" src="https://cdn-icons-png.flaticon.com/128/5111/5111624.png" alt="">
+    <p>China</p>
+  </div>
+  <span class="divider"></span>
+
+</div>
+
+
+<div>
+
+  <h4 class="match-date">Thur 23 May 2024</h4>
+
+
+  <div class="match-score">
+    <p>Malabor</p>
+    <img class="match-result-img" src= "https://networks.au-ibar.org/show/university-of-calabar/image/2008090514-1061-3120-400x300/AU+REC+logos+-+2022-03-30T154203.837.png", alt="">
+    <span class="match-result">- : -</span>
+    <img class="match-result-img" src="https://world-cup.codsfli.com/flag/BRA.png" alt="">
+   <p>Brazil</p>
+</div>
+<span class="divider"></span>
+
+
+<div class="match-score">
+  <p>Denmark</p>
+  <img class="match-result-img" src="https://world-cup.codsfli.com/flag/DEN.png" alt="">
+  <span class="match-result">- : -</span>
+  <img class="match-result-img" src= "https://cdn-icons-png.flaticon.com/128/3373/3373319.png"alt="">
+  <p>UAE</p>
+</div>
+<span class="divider"></span>
+
+
+<div class="match-score">
+  <p>Poland</p>
+  <img class="match-result-img" src="https://world-cup.codsfli.com/flag/POL.png"alt="">
+  <span class="match-result">- : -</span>
+  <img class="match-result-img" src= "https://cdn-icons-png.flaticon.com/128/206/206697.png"alt="">
+  <p>Israel</p>
+</div>
+<span class="divider"></span>
+
+</div>
+
+
+<div>
+
+  <h4 class="match-date">Friday 24 May 2024</h4>
+
+  <div class="match-score">
+    <p>Sweden</p>
+    <img class="match-result-img" src= "https://cdn-icons-png.flaticon.com/128/555/555606.png" alt="">
+    <span class="match-result">- : -</span>
+    <img class="match-result-img" src="https://world-cup.codsfli.com/flag/POR.png"alt="">
+    <p>Portugal</p>
+  </div>
+  <span class="divider"></span>
+
+</div>
+
+  </div>
+
+
+
+   <!-- GROUP STAGE -->
+
+    <h2 class="match-result-heading">GROUP STAGE RESULTS</h2>
    
   
   <div class="match-result-container read--more">
@@ -636,7 +749,7 @@
                 <div class="match-score">
                   <p>Paraguay</p>  
                     <img class="match-result-img" src= "https://cdn-icons-png.flaticon.com/128/206/206811.png" alt="">
-                    <span class="match-result">- : -</span>
+                    <span class="match-result">0 - 0</span>
                 <img class="match-result-img" src= "https://world-cup.codsfli.com/flag/ARG.png" alt="">
                 <p>Argentina</p>
                 </div>
@@ -646,7 +759,7 @@
             <div class="match-score">  
                 <p>Portugal</p>
                 <img class="match-result-img" src=  "https://world-cup.codsfli.com/flag/POR.png" alt="">
-                <span class="match-result">- : -</span>
+                <span class="match-result">3 - 1</span>
                 <img class="match-result-img" src=  "https://world-cup.codsfli.com/flag/USA.png"  alt="">
                 <p>USA</p>
             </div>
